// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render BlogItem component correctly with all props 1`] = `
<DocumentFragment>
  <div
    class="blog-item"
  >
    <div
      class="blog-item__top"
    >
      <a>
        <h5>
          title2...
        </h5>
        <div
          data-testid="blog_description"
        >
          description...
        </div>
      </a>
    </div>
    <div
      class="blog-item__bottom"
    >
      <div
        class="blog-item__buttons"
      >
        <button
          class="blog-item__prebutton"
          data-testid="preview_button"
        >
          <abbr
            class="none-decoration"
            title="Preview The Blog"
          >
            Preview
          </abbr>
        </button>
        <button
          class="blog-item__delbutton"
          data-testid="remove_button"
        >
          <abbr
            class="none-decoration"
            title="Delete Blog"
          >
            Delete
          </abbr>
        </button>
      </div>
      <div
        class="blog-item__usertime"
      >
        <a>
          <abbr
            class="none-decoration"
            title="Anonymous"
          >
            Anonymous
          </abbr>
        </a>
        <span
          class="blog-item__between"
        >
          |
        </span>
        <span>
          15 Nov 2021
        </span>
      </div>
    </div>
    <button
      data-testid="close_button"
    >
      X
    </button>
    BlogPage
    <h5
      class="delete-modal__title"
    >
      If you delete this blog there is no way to return it.
    </h5>
    <div
      class="delete-modal__buttons"
    >
      <abbr
        title="Delete Blog"
      >
        <button
          class="delete-modal__delete-button"
          data-testid="delete_button"
        >
          Delete Blog
        </button>
      </abbr>
      <abbr
        title="Close"
      >
        <button
          class="delete-modal__close-button"
          data-testid="close_button"
        >
          X
        </button>
      </abbr>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render BlogItem component correctly without uname 1`] = `
<DocumentFragment>
  <div
    class="blog-item"
  >
    <div
      class="blog-item__top"
    >
      <a>
        <h5>
          title2...
        </h5>
        <div
          data-testid="blog_description"
        >
          description...
        </div>
      </a>
    </div>
    <div
      class="blog-item__bottom"
    >
      <div
        class="blog-item__buttons"
      >
        <button
          class="blog-item__prebutton"
          data-testid="preview_button"
        >
          <abbr
            class="none-decoration"
            title="Preview The Blog"
          >
            Preview
          </abbr>
        </button>
      </div>
      <div
        class="blog-item__usertime"
      >
        <a>
          <abbr
            class="none-decoration"
            title="Anonymous"
          >
            Anonymous
          </abbr>
        </a>
        <span
          class="blog-item__between"
        >
          |
        </span>
        <span>
          15 Nov 2021
        </span>
      </div>
    </div>
    <button
      data-testid="close_button"
    >
      X
    </button>
    BlogPage
    <h5
      class="delete-modal__title"
    >
      If you delete this blog there is no way to return it.
    </h5>
    <div
      class="delete-modal__buttons"
    >
      <abbr
        title="Delete Blog"
      >
        <button
          class="delete-modal__delete-button"
          data-testid="delete_button"
        >
          Delete Blog
        </button>
      </abbr>
      <abbr
        title="Close"
      >
        <button
          class="delete-modal__close-button"
          data-testid="close_button"
        >
          X
        </button>
      </abbr>
    </div>
  </div>
</DocumentFragment>
`;
